# MuSE_Emotion_Analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/IEMOCAP/: all.csv  dataset.csv
dataset/MuSE/: all.csv
manual_transcripts/: 02_DR-100_0070_1.txt  02_DR-100_0070_3.txt  02_DR-100_0070_5.txt  02_DR-100_0070_7.txt  02_DR-100_0070_9.txt
muse_features/MuSE_Audio_Features/: 01_DR-100_0079_1_sentence_1.npy  01_DR-100_0079_1_sentence_10.npy  01_DR-100_0079_1_sentence_11.npy  01_DR-100_0079_1_sentence_2.npy  01_DR-100_0079_1_sentence_3.npy  01_DR-100_0079_1_sentence_4.npy  01_DR-100_0079_1_sentence_5.npy  01_DR-100_0079_1_sentence_6.npy  01_DR-100_0079_1_sentence_7.npy  01_DR-100_0079_1_sentence_8.npy  01_DR-100_0079_1_sentence_9.npy  01_DR-100_0079_3_sentence_1.npy  01_DR-100_0079_3_sentence_10.npy  01_DR-100_0079_3_sentence_2.npy  01_DR-100_0079_3_sentence_3.npy  01_DR-100_0079_3_sentence_4.npy  01_DR-100_0079_3_sentence_5.npy  01_DR-100_0079_3_sentence_6.npy  01_DR-100_0079_3_sentence_7.npy  01_DR-100_0079_3_sentence_8.npy  01_DR-100_0079_3_sentence_9.npy  01_DR-100_0079_5_sentence_1.npy  01_DR-100_0079_5_sentence_2.npy  01_DR-100_0079_5_sentence_3.npy  01_DR-100_0079_5_sentence_4.npy  01_DR-100_0079_5_sentence_5.npy  01_DR-100_0079_5_sentence_6.npy  01_DR-100_0079_5_sentence_7.npy  01_DR-100_0079_7_sentence_1.npy  01_DR-100_0079_7_sentence_10.npy  (+2618 more)
nbs/: MuSE_all.csv  MuSE_allv2.csv  all.csv  dataloader.ipynb  datasets.py  earlystopping.py  iemocap_models.ipynb  muse_dataset_creator.ipynb  muse_models.ipynb  sampler.py  test_cuda.ipynb  test_datasets.ipynb
(+288 files in other folders)
