[tool.poetry]
name = "stressed_emotion"
version = "0.1.0"
description = ""
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.2.0"
jupyterlab = "^3.0.8"
ffmpeg = "^1.4"
moviepy = "^1.0.3"
opensmile = "^2.0.0"
liwc = "^0.5.0"
SpeechRecognition = "^3.8.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
torchaudio = "^0.7.2"
sklearn = "^0.0"
matplotlib = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
